# llama.cpp

ggml/: CMakeLists.txt
ggml/include/: ggml-rpc.h
ggml/src/: CMakeLists.txt  ggml-impl.h  gguf.cpp
ggml/src/ggml-rpc/: CMakeLists.txt  ggml-rpc.cpp
tools/rpc/: CMakeLists.txt  rpc-server.cpp
